--- a/src/Dfc.ProviderPortal.ReferenceData.Api/Dfc.ProviderPortal.ReferenceData.Api.csproj
+++ b/src/Dfc.ProviderPortal.ReferenceData.Api/Dfc.ProviderPortal.ReferenceData.Api.csproj
@@ -11,7 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dfc.ProviderPortal.ReferenceData\Dfc.ProviderPortal.ReferenceData.csproj" />
   </ItemGroup>
 
 </Project>
