--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
 # ARM template
 - template: AzureDevOpsTemplates/Build/dfc-arm-build.yml@dfc-devops
   parameters:
-    ArmTemplateRoot: Resources
+    ArmTemplateRoot: '$(System.DefaultWorkingDirectory)\Resources'
 
 # restore
 - task: DotNetCoreCLI@2
