--- a/src/Dfc.ProviderPortal.ReferenceData/Dfc.ProviderPortal.ReferenceData.csproj
+++ b/src/Dfc.ProviderPortal.ReferenceData/Dfc.ProviderPortal.ReferenceData.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <!--<TargetFramework>netcoreapp2.1</TargetFramework>-->
+    <!--<TargetFramework>netstandard2.0</TargetFramework>-->
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Cli" Version="5.0.0-rc2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
