COUR-1230 Change to the 1 FeChoices endpoint to see if we can get to call this via API-M

--- a/src/Dfc.ProviderPortal.ReferenceData/Dfc.ProviderPortal.ReferenceData.csproj
+++ b/src/Dfc.ProviderPortal.ReferenceData/Dfc.ProviderPortal.ReferenceData.csproj
@@ -3,6 +3,8 @@
     <!--<TargetFramework>netstandard2.0</TargetFramework>-->
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
+    <AssemblyVersion>1.0.19186.1127</AssemblyVersion>
+    <FileVersion>1.0.19186.1127</FileVersion>
   </PropertyGroup>
   
   <ItemGroup>
