--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -65,6 +65,12 @@ steps:
     publishWebProjects: false
     zipAfterPublish: true
 
+- task: CopyFiles@2
+  displayName: 'Copy Azure folder to Staging'
+  inputs:
+    SourceFolder: $(System.DefaultWorkingDirectory)\Resources\Azure
+    TargetFolder: $(build.artifactstagingdirectory)\Azure\Azure
+
 - task: PublishBuildArtifacts@1
   displayName: Publish Artifact
   inputs:
