Ncsd 1000 reorg resources folders (#33)
* Moved ARM templates to ArmTemplates folder

* Fixed path in build template

* Increased version of dfc-devops referenced

* Added build task to copy Azure folder to staging

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
     type: github
     name: SkillsFundingAgency/dfc-devops
     endpoint: 'GitHub (ESFA)'
-    ref: refs/tags/v1.2.1
+    ref: refs/tags/v1.5.0
 
 trigger:
   batch: true
@@ -29,7 +29,7 @@ steps:
 # ARM template
 - template: AzureDevOpsTemplates/Build/dfc-arm-build.yml@dfc-devops
   parameters:
-    ArmTemplateRoot: '$(System.DefaultWorkingDirectory)\Resources'
+    ArmTemplateRoot: '$(System.DefaultWorkingDirectory)\Resources\ArmTemplates'
 
 # restore
 - task: DotNetCoreCLI@2
@@ -64,6 +64,12 @@ steps:
     arguments: '--output $(Build.ArtifactStagingDirectory)'
     publishWebProjects: false
     zipAfterPublish: true
+
+- task: CopyFiles@2
+  displayName: 'Copy Azure folder to Staging'
+  inputs:
+    SourceFolder: $(System.DefaultWorkingDirectory)\Resources\Azure
+    TargetFolder: $(build.artifactstagingdirectory)\Azure\Azure
 
 - task: PublishBuildArtifacts@1
   displayName: Publish Artifact
