--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -70,6 +70,11 @@ steps:
   inputs:
     SourceFolder: $(System.DefaultWorkingDirectory)\Resources\Azure
     TargetFolder: $(build.artifactstagingdirectory)\Azure\Azure
+- task: CopyFiles@2
+  displayName: 'Copy ApimPolicy folder to Staging'
+  inputs:
+    SourceFolder: $(System.DefaultWorkingDirectory)\Resources\ApimPolicy
+    TargetFolder: $(build.artifactstagingdirectory)\Azure\ApimPolicy
 
 - task: PublishBuildArtifacts@1
   displayName: Publish Artifact
