Update azure-pipelines.yml for Azure Pipelines
added trigger condition

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -22,12 +22,14 @@ trigger:
     include:
     - master
     - dev
+    - monitoring
 
 pr:
   branches:
     include:
     - master
     - dev
+    - monitoring
 
 steps:
 
