updated template path

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -32,7 +32,7 @@ pr:
 steps:
 
 # ARM template
-- template: AzureDevOpsTemplates/Build/dfc-arm-build.yml@dfc-devops
+- template: AzureDevOpsTemplates\Build\StepTemplates\dfc-arm-build.yml@dfc-devops
   parameters:
     ArmTemplateRoot: '$(System.DefaultWorkingDirectory)\Resources\ArmTemplates'
 
